# CMS-Data-Explorer

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
src/cms_data_explorer/: __init__.py  __main__.py  cache.py  cli.py  config.py  mcp_server.py
src/cms_data_explorer/clients/: __init__.py  base.py  bulk.py  cms_api.py  npi.py  soda.py
src/cms_data_explorer/engine/: __init__.py  duckdb_engine.py
src/cms_data_explorer/registry/: __init__.py  catalog.py  models.py  seed_catalog.json
